Revision history for Pod::Weaver::Section::SeeAlso

{{$NEXT}}

1.000
	Released: 2010-05-30 18:05:59 UTC

0.004
	Released: 2010-05-28 20:09:38 UTC

	Add example hunk of POD

0.003
	Released: 2010-05-28 18:01:23 UTC

	Fix how we detect existing SEE ALSO section

* 0.002
	Released: 2010-05-11 21:09:30 UTC

	re-release with a fixed MANIFEST.SKIP

* 0.001
	Released: 2010-05-11 20:53:24 UTC

	initial release