@@ -1,5 +1,2 @@
 name = Pod-Weaver-Section-SeeAlso
-
-; do everything automatically
 [@Apocalyptic]
-pauseid = APOCAL
